--- a/settings.json
+++ b/settings.json
@@ -28,11 +28,18 @@
         "settings": {
           "foreground": "#a9b7c6" //"#39cc8f"
         }
-      }
+      },
+      {
+        "name": "Keywords",
+        "scope": "keyword",
+        "settings": {
+          "foreground": "#CC7832"
+        }
+      },
     ]
   },
 
-   "workbench.colorCustomizations": {
+  "workbench.colorCustomizations": {
     "editor.background": "#323232", //"#262626
     "editor.lineHighlightBackground": "#3b3b3b",
     "editor.lineHighlightBorder": "#3b3b3b",
@@ -42,112 +49,4 @@
     "scrollbarSlider.background": "#3e3e42",
     "editor.selectionBackground": "#386088",   
   }
-  /* "workbench.colorCustomizations": {
-    "editor.background": "#222525",//"#2d3031"
-    "selection.background": "#08335e",
-    "activityBar.background": "#3b3b3b",
-    "activityBarBadge.background": "#6786c7",
-    "activityBar.activeBackground": "#4a4d51",
-    "sideBar.background": "#323232",
-    "sideBarSectionHeader.background": "#00000000",
-    "list.inactiveSelectionBackground": "#4a4d51",
-    "list.hoverBackground": "#2a2d2e",
-    "list.activeSelectionBackground": "#354f85",
-    "list.dropBackground": "#323232",
-    "list.focusBackground": "#354f85",
-    "listFilterWidget.background": "#3b3b3b",
-    "statusBar.background": "#3b3b3b",
-    "statusBarItem.hoverBackground": "#ffffff1f",
-    "statusBar.debuggingBackground": "#354f85",
-    "statusBar.noFolderBackground": "#3b3b3b",
-    "statusBarItem.remoteBackground": "#354f85",
-    "titleBar.activeBackground": "#3b3b3b",
-    "titleBar.inactiveBackground": "#3b3b3b",
-    "menubar.selectionBackground": "#ffffff1a",
-    "menu.background": "#3b3b3b",
-    "menu.selectionBackground": "#354f85",
-    "menu.separatorBackground": "#bbbbbb",
-    "button.background": "#354f85",
-    "button.hoverBackground": "#354f85",
-    "button.secondaryBackground": "#424447",
-    "button.secondaryHoverBackground": "#45494e",
-    "input.background": "#323232",
-    "inputOption.activeBackground": "#4a4d51",
-    "editorCursor.background": "#282828",
-    "editor.selectionBackground": "#08335e",
-    "editor.inactiveSelectionBackground": "#3a3d41",
-    "editor.selectionHighlightBackground": "#add6ff26",
-    "editor.findMatchBackground": "#515c6a",
-    "editor.findMatchHighlightBackground": "#ea5c0055",
-    "editor.findRangeHighlightBackground": "#3a3d4166",
-    "editor.rangeHighlightBackground": "#ffffff0b",
-    "editor.hoverHighlightBackground": "#264f7840",
-    "editor.wordHighlightStrongBackground": "#004972b8",
-    "editor.wordHighlightBackground": "#575757b8",
-    "editor.lineHighlightBackground": "#202424",
-    "editorIndentGuide.background": "#404040",
-    "editorIndentGuide.activeBackground": "#707070",
-    "editorBracketMatch.background": "#0064001a",
-    "editor.foldBackground": "#264f784d",
-    "editorOverviewRuler.background": "#25252500",
-    "editorError.background": "#b73a3400",
-    "editorWarning.background": "#A9904000",
-    "editorInfo.background": "#4490BF00",
-    "editorGutter.background": "#b81b1b",
-    "editorGutter.modifiedBackground": "#0c7d9d",
-    "editorGutter.addedBackground": "#587c0c",
-    "editorGutter.deletedBackground": "#94151b",
-    "diffEditor.insertedTextBackground": "#95c91de0",
-    "diffEditor.removedTextBackground": "#ff000033",
-    "panel.background": "#d41010",
-    "badge.background": "#6786c7",
-    "terminal.selectionBackground": "#1658bb",
-    "terminalCursor.background": "#0087FF",
-    "breadcrumb.background": "#dd1111",
-    "editorGroupHeader.tabsBackground": "#a33535",
-    "tab.activeBackground": "#941f1f",
-    "tab.inactiveBackground": "#c91010",
-    "scrollbarSlider.background": "#3e3e42",
-    "scrollbarSlider.hoverBackground": "#2a2ab8",
-    "scrollbarSlider.activeBackground": "#0606be",
-    "progressBar.background": "#354f85",
-    "editorWidget.background": "#c51919",
-    "debugToolBar.background": "#921717",
-    "notifications.background": "#3b3b3b",
-    "notificationCenterHeader.background": "#a51a1a",
-    "editorMarkerNavigation.background": "#2121cc",
-    "editorMarkerNavigationError.background": "#f48771",
-    "editorMarkerNavigationWarning.background": "#cca700",
-    "editorMarkerNavigationInfo.background": "#75beff",
-    "merge.currentHeaderBackground": "#367366",
-    "merge.currentContentBackground": "#27403B",
-    "merge.incomingHeaderBackground": "#395F8F",
-    "merge.incomingContentBackground": "#1d56b3",
-    "merge.commonHeaderBackground": "#af1212",
-    "merge.commonContentBackground": "#df1414",
-    "editorSuggestWidget.background": "#d12020",
-    "editorSuggestWidget.selectedBackground": "#354f85",
-    "editorHoverWidget.background": "#b41212",
-    "peekViewEditor.background": "#1a8cd8",
-    "peekViewEditorGutter.background": "#1686d1",
-    "peekViewEditor.matchHighlightBackground": "#ff8f0099",
-    "peekViewEditor.matchHighlightBorder": "#ee931e",
-    "peekViewResult.background": "#0b0ba7",
-    "peekViewResult.matchHighlightBackground": "#ea5c004d",
-    "peekViewResult.selectionBackground": "#2e6aa5da",
-    "peekViewResult.selectionForeground": "#ffffff",
-    "peekViewTitle.background": "#ce1818",
-    "checkbox.background": "#c51818",
-    "dropdown.background": "#c72828",
-    "minimapGutter.addedBackground": "#587c0c",
-    "minimapGutter.modifiedBackground": "#0c7d9d",
-    "minimapGutter.deletedBackground": "#e41621",
-    "minimap.background": "#262626",
-    "sideBar.dropBackground": "#323232",
-    "editorGroup.emptyBackground": "#d61313",
-    "statusBarItem.activeBackground": "#bb0f0fe1",
-    "settings.focusedRowBackground": "#ec2828fb",
-    "walkThrough.embeddedEditorBackground": "#e90a0ab0",
-    "debugExceptionWidget.background": "#ce1c1c"
-  } */
 }
