Path to theme file

--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,5 @@
 //C:\Users\o.o.kolesnyk\AppData\Roaming\Code\User
+//C:\Users\o.o.kolesnyk\.vscode\extensions\edwinsulaiman.jetbrains-rider-dark-theme-0.0.3\themes
 {
   "git.autofetch": true,
   "workbench.startupEditor": "none",
