--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,6 @@
 //C:\Users\o.o.kolesnyk\AppData\Roaming\Code\User
 //C:\Users\o.o.kolesnyk\.vscode\extensions\edwinsulaiman.jetbrains-rider-dark-theme-0.0.3\themes
+//vs command in pallet "> Inspect Editor Tokens and Scopes"
 {
   "git.autofetch": true,
   "workbench.startupEditor": "none",
