--- a/settings.json
+++ b/settings.json
@@ -15,7 +15,7 @@
     "textMateRules": [
       {
         "name": "Classes",
-        "scope": "support.class, entity.name.type.class",
+        "scope": "support.class, entity.name.type.class, entity.name.type.namespace",
         "settings": {
           "foreground": "#a9b7c6" //"#c191ff"
         }
@@ -34,11 +34,25 @@
       },
       {
         "name": "Keywords",
-        "scope": "keyword",
+        "scope": "keyword, storage.modifier",
         "settings": {
           "foreground": "#CC7832"
         }
       },
+      {
+         "name": "Namespaces",
+         "scope": "entity.name.namespace",
+         "settings": {
+           "foreground": "#a9b7c6"
+         }
+       },
+       {
+         "name": "Type Name",
+         "scope": "entity.name.type",
+         "settings": {
+           "foreground": "#a9b7c6"
+         }
+        },
     ]
   },
 
@@ -50,6 +64,13 @@
     "editorGroup.emptyBackground": "#3b3b3b",
     "editorGutter.background": "#3b3b3b",
     "scrollbarSlider.background": "#3e3e42",
-    "editor.selectionBackground": "#386088",   
+    "editor.selectionBackground": "#386088",
+    "editorBracketHighlight.foreground1": "#a9b7c6",
+    "editorBracketHighlight.foreground2": "#a9b7c6",
+    "editorBracketHighlight.foreground3": "#a9b7c6",
+    "editorBracketHighlight.foreground4": "#a9b7c6",
+    "editorBracketHighlight.foreground5": "#a9b7c6",
+    "editorBracketHighlight.foreground6": "#a9b7c6",
+    "editorBracketHighlight.unexpectedBracket.foreground": "#a9b7c6"
   }
 }
